force-app/main/default/objects/Distribution_Detail__c/Distribution_Detail__c.object-meta.xml
<CustomObject>
    <label>Distribution Detail</label>
    <nameField>
        <label>Distribution Detail</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distribution Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>