force-app/main/default/objects/Distribution_Detail__c/fields/EIN__c.field-meta.xml
<CustomField>
    <fullName>EIN__c</fullName>
    <formula>Organization_Name__r.EIN_Number__c</formula>
    <label>EIN</label>
    <type>Text</type>
</CustomField>