force-app/main/default/objects/Distribution_Detail__c/fields/In_Kind_Booked__c.field-meta.xml
<CustomField>
    <fullName>In_Kind_Booked__c</fullName>
    <formula>Number_of_Diapers_Per_Bank__c * 0.12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In-Kind Booked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>