force-app/main/default/objects/Distribution_Detail__c/fields/Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Member_Id__c</fullName>
    <formula>Organization_Name__r.Member_ID__c</formula>
    <label>Member Id</label>
    <type>Text</type>
</CustomField>