force-app/main/default/objects/Distribution_Detail__c/fields/Number_of_Diapers_Per_Bank__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Diapers_Per_Bank__c</fullName>
    <label>Number of Diapers Per Bank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>