force-app/main/default/objects/Distribution_Detail__c/fields/Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Organization_Name__c</fullName>
    <label>Organization Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Distribution Details</relationshipLabel>
    <relationshipName>Distribution_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>