force-app/main/default/objects/Distribution_Detail__c/fields/P2P_Detail__c.field-meta.xml
<CustomField>
    <fullName>P2P_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P2P Detail</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>P2P_Orders__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Organization_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>P2P_Orders__c</referenceTo>
    <relationshipLabel>P2P_Orders</relationshipLabel>
    <relationshipName>P2P_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>