force-app/main/default/objects/Distribution_Detail__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bivona Company Bookcases</fullName>
            </value>
            <value>
                <fullName>Honest Formula</fullName>
            </value>
            <value>
                <fullName>Honest Wipes</fullName>
            </value>
            <value>
                <fullName>Huggies Diapers</fullName>
            </value>
            <value>
                <fullName>Huggies Wipes</fullName>
            </value>
            <value>
                <fullName>Penguin Books</fullName>
            </value>
            <value>
                <fullName>Period Supplies</fullName>
            </value>
            <value>
                <fullName>Poise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>